重新统一项目目录结构，完成鉴权模块和基础测试

--- a/tutorials/1. 依赖和数据库配置和管理.md
+++ b/tutorials/1. 依赖和数据库配置和管理.md
@@ -399,14 +399,15 @@ alembic init migrations
 # 关键片段（示意）
 from alembic import context
 from sqlalchemy import create_engine, pool
-from app.models import Base                  # 我们的模型统一从这里导出 Base
-from app.core.config import settings         # 我们的配置入口（读 .env）
+from app.models import Base  # 我们的模型统一从这里导出 Base
+from core.config.config import settings  # 我们的配置入口（读 .env）
 
 config = context.config
-target_metadata = Base.metadata              # 告诉 Alembic：以这套表结构为“真相”
+target_metadata = Base.metadata  # 告诉 Alembic：以这套表结构为“真相”
+
 
 def run_migrations_offline():
-    url = settings.database_url              # 用同步 URL
+    url = settings.database_url  # 用同步 URL
     context.configure(
         url=url,
         target_metadata=target_metadata,
@@ -416,6 +417,7 @@ def run_migrations_offline():
     )
     with context.begin_transaction():
         context.run_migrations()
+
 
 def run_migrations_online():
     connectable = create_engine(
