--- a/tutorials/2. 响应与异常.md
+++ b/tutorials/2. 响应与异常.md
@@ -636,7 +636,8 @@ def verify_email(token: str):
 ```python
 from fastapi import Request, Response
 from fastapi.responses import JSONResponse
-from app.schemas.api_response import ApiResponse  # 你的响应壳
+from schemas.core.api_response import ApiResponse  # 你的响应壳
+
 
 @app.get("/api/v1/items/{item_id}")
 def get_item(item_id: str, request: Request):
@@ -648,7 +649,7 @@ def get_item(item_id: str, request: Request):
         return Response(status_code=304, headers={"ETag": etag, "Cache-Control": "max-age=60"})
 
     # 3) 未命中 → 返回 200 + JSON 壳 + 相同 ETag
-    payload = ApiResponse(data={"item_id": item_id, "name": "..." }).model_dump()
+    payload = ApiResponse(data={"item_id": item_id, "name": "..."}).model_dump()
     return JSONResponse(
         status_code=200,
         content=payload,
